# Leo-Trans

./: .gitignore  IMPLEMENTATION_PLAN.md  READLEO.md  README.md
apps/backend/: README.md  leo.db  pyproject.toml  ruff.toml
apps/backend/app/: dependencies.py  main.py
apps/backend/app/api/routes/: __init__.py  glossary.py  health.py  metrics.py  submissions.py  translate.py
apps/backend/app/core/: cache.py  config.py
apps/backend/app/data/: initial_glossary.json
apps/backend/app/db/: base.py  init_db.py  session.py
apps/backend/app/models/: __init__.py  glossary.py  submission.py
apps/backend/app/schemas/: __init__.py  glossary.py  metrics.py  submission.py
apps/backend/app/services/: exports.py  glossary.py  metrics.py  orchestrator.py  prompting.py  submission.py  translation.py
apps/backend/app/services/providers/: __init__.py  base.py  google_translate_provider.py  openai_provider.py
apps/backend/tests/: conftest.py  test_glossary.py  test_health.py  test_metrics.py  test_submissions.py
apps/frontend/src/app/: page.tsx
apps/frontend/src/app/admin/glossary/: page.tsx
apps/frontend/src/app/metrics/: page.tsx
apps/frontend/src/app/submissions/: page.tsx
apps/frontend/src/app/submissions/[id]/: page.tsx
apps/frontend/src/app/submissions/new/: page.tsx
apps/frontend/src/lib/: api.ts
