[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leo-backend"
version = "0.1.0"
description = "AI translation orchestration service for Leo"
authors = [
  { name = "Leo Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.114.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "httpx>=0.27.0,<0.29.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "aiosqlite>=0.19.0,<0.21.0",
  "openai>=1.45.0,<2.0.0",
  "tenacity>=8.2.0,<9.0.0",
  "python-docx>=1.1.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<0.24.0",
  "ruff>=0.6.0,<0.7.0",
  "alembic>=1.13.0,<2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
